--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ body{
     border: 5px;
     border-radius: 6px;
     letter-spacing: 3px;
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, .7);
 }
 
 .tempo
